Cimientos de envios

--- a/src/views/admin/accounts.ejs
+++ b/src/views/admin/accounts.ejs
@@ -27,9 +27,10 @@
         <table class="product-table">
           <thead>
             <tr>
-              <th style="width: 30%">Nombre de Usuario</th>
-              <th style="width: 30%">Fecha de Creación</th>
-              <th style="width: 30%">Estado</th>
+              <th style="width: 15%">ID</th>
+              <th style="width: 25%">Nombre de Usuario</th>
+              <th style="width: 25%">Fecha de Creación</th>
+              <th style="width: 25%">Estado</th>
               <th style="width: 10%">Acciones</th>
             </tr>
           </thead>
