--- a/src/views/admin/brandCategory.ejs
+++ b/src/views/admin/brandCategory.ejs
@@ -36,8 +36,9 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th style="width: 45%">Nombre</th>
-                                <th style="width: 45%">Imagen</th>
+                                <th style="width: 30%">ID</th>
+                                <th style="width: 30%">Nombre</th>
+                                <th style="width: 30%">Imagen</th>
                                 <th style="width: 10%">Acciones</th>
                             </tr>
                         </thead>
@@ -68,11 +69,12 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th style="width: 30%">Nombre</th>
-                                <th style="width: 30%">Logo</th>
-                                <th style="width: 30%">Asociadas</th>
+                                <th style="width: 20%">ID</th>
+                                <th style="width: 20%">Nombre</th>
+                                <th style="width: 20%">Logo</th>
+                                <th style="width: 25%">Asociadas</th>
                                 <th style="width: 10%">Acciones</th>
-                            </tr>
+                                </tr>
                         </thead>
                         <tbody id="brandsTableBody">
                         </tbody>
