--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -22,9 +22,10 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th style="width: 30%">Nombre de usuario</th>
-                                <th style="width: 30%">Correo</th>
-                                <th style="width: 30%">Fecha de creación</th>
+                                <th style="width: 15%">ID</th>
+                                <th style="width: 25%">Nombre de usuario</th>
+                                <th style="width: 25%">Correo</th>
+                                <th style="width: 25%">Fecha de creación</th>
                                 <th style="width: 10%">Estado</th>
                             </tr>
                         </thead>
