--- a/src/views/admin/variants.ejs
+++ b/src/views/admin/variants.ejs
@@ -33,6 +33,7 @@
           <table class="product-table">
             <thead>
               <tr>
+                <th style="width: 15%">id</th>
                 <th style="width: 20%">Producto</th>
                 <th style="width: 20%">Color</th>
                 <th style="width: 20%">Cantidad</th>
