--- a/src/views/store/order.ejs
+++ b/src/views/store/order.ejs
@@ -53,7 +53,9 @@
 							<div class="error-text" data-error-for="address"></div>
 						</div>
 						<div class="form-group">
-							<input class="input" type="text" name="city" placeholder="Ciudad">
+							<select class="input" id="city-select" name="ciudad_envio_id">
+								<option value="">Selecciona una ciudad</option>
+							</select>
 							<div class="error-text" data-error-for="city"></div>
 						</div>
 						<div class="form-group">
