--- a/src/views/admin/orderDetails.ejs
+++ b/src/views/admin/orderDetails.ejs
@@ -60,6 +60,7 @@
                             <th>Color</th>
                             <th>Cantidad</th>
                             <th>Precio</th>
+                            <th>Envío $</th>
                             <th>Descuento%</th>
                             <th>Subtotal</th>
                         </tr>
@@ -68,9 +69,10 @@
                         <% order.items.forEach(item => { %>
                             <tr>
                                 <td><%= item.nombre_producto %></td>
-                                <td><%= item.colorSeleccionado %></td>
+                                <td><%= item.colorSeleccionado.toUpperCase() %></td>
                                 <td><%= item.cantidad %></td>
                                 <td>$<%= Number(item.precio_unitario).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
+                                <td>$<%= Number(order.costo_envio || 0).toFixed(2) %></td>
                                 <td>$<%= Number(item.descuento).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
                                 <td>$<%= Number(item.subtotal).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></td>
                             </tr>
