--- a/src/views/admin/orderDetails.ejs
+++ b/src/views/admin/orderDetails.ejs
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <a href="/api/admin/pedidos" class="btn-details no-in-pdf">Volver</a>
+        <a href="/api/admin/orders" class="btn-details no-in-pdf">Volver</a>
     </div>
 </main>
 
